fix: resize paddings, gaps and initials-logo-size for small devices (320px) on add-/edit-contact-form

--- a/src/app/components/contact-add-form/contact-add-form.scss
+++ b/src/app/components/contact-add-form/contact-add-form.scss
@@ -1,5 +1,5 @@
 @use 'styles/variables' as *;
-@use 'styles/mixins' as mixins;
+@use 'styles/mixins' as *;
 
 .modal-title-area {
   background-color: $blue-darker;
@@ -17,8 +17,8 @@
 }
 
 .contact-avatar {
-  width: 7.5rem;
-  height: 7.5rem;
+  width: 5.5rem;
+  height: 5.5rem;
   border-radius: 50%;
   color: #ffffff;
   background-color: $grey;
@@ -27,6 +27,12 @@
   text-align: center;
   flex-shrink: 0;
   box-shadow: 0 3px 4px rgba(0, 0, 0, 0.4);
+
+  @include for-size(lg) {
+    width: 6.25rem;
+    height: 6.25rem;
+    font-size: 3.5rem;
+  }
 }
 
 @media (max-width: 992px) {
@@ -34,17 +40,11 @@
     margin-top: 3rem;
   }
 
-  .modal-content-area ::ng-deep app-input-field .errorMessage {
-    min-height: 0;
-  }
-
   .contact-avatar {
     position: absolute;
     top: -50px;
     right: 50%;
     transform: translateX(50%);
-    width: 100px;
-    height: 100px;
     border: 2px solid $white;
   }
 }
