--- a/src/app/components/contact-edit-form/contact-edit-form.scss
+++ b/src/app/components/contact-edit-form/contact-edit-form.scss
@@ -1,5 +1,5 @@
 @use 'styles/variables' as *;
-@use 'styles/mixins' as mixins;
+@use 'styles/mixins' as *;
 
 .modal-title-area {
   background-color: $blue-darker;
@@ -12,19 +12,26 @@
 }
 
 .contact-avatar {
-  width: 7.5rem;
-  height: 7.5rem;
+  width: 5.5rem;
+  height: 5.5rem;
   border-radius: 50%;
   color: #ffffff;
+  background-color: $grey;
   font-weight: 700;
-  font-size: 3rem;
+  font-size: 2rem;
   text-align: center;
   flex-shrink: 0;
   box-shadow: 0 3px 4px rgba(0, 0, 0, 0.4);
+
+  @include for-size(lg) {
+    width: 6.25rem;
+    height: 6.25rem;
+    font-size: 3rem;
+  }
 }
 
 .visually-hidden {
-  @include mixins.visually-hidden;
+  @include visually-hidden;
 }
 
 @media (max-width: 992px) {
@@ -33,8 +40,6 @@
     top: -50px;
     right: 50%;
     transform: translateX(50%);
-    width: 100px;
-    height: 100px;
     border: 2px solid $white;
   }
 }
