--- a/src/app/shared/ui/modal-wrapper/modal-wrapper.scss
+++ b/src/app/shared/ui/modal-wrapper/modal-wrapper.scss
@@ -19,7 +19,7 @@ div.modal-container {
   width: 90%;
   max-width: 75.75rem;
   height: 60%;
-  max-height: 80vh;
+  max-height: 90vh;
   min-height: 37rem;
   background: $white;
   border-radius: $card-border-radius;
